# incubator-sync-upgrade

./: LICENSE  README.md  pyproject.toml
.github/workflows/: Tests.yml  publish.yml
syncupgrade/: __init__.py  cli.py
syncupgrade/cli_helper/: cli_utils.py  manage_registries.py
syncupgrade/codmods/: libcst_units.py  transformers_creation.py
syncupgrade/exceptions/: custom_exceptions.py
syncupgrade/git_integration/: git_wrapper.py  remote_git.py
syncupgrade/matchers/: node_matcher.py
syncupgrade/models/: cli_models.py  enum_models.py
syncupgrade/refactor/: refactoring_methods.py
syncupgrade/utils/: option_conditions.py  parsing_utils.py
tests/: conftest.py
tests/integration_tests/: test_cli_commands.py  test_refactor_file.py
tests/mock_files/: cli_options.py  mock_code.py  mock_nodes.py
tests/mock_files/end_to_end_test/: mock_code_file.py  mock_refactored_file.py  operator.py  refactored_operator.py
tests/unit_tests/: test_matchers.py  test_models.py  test_parsing_utils.py  test_refactor_methods.py  test_registry.py  test_transformers.py
