[tool.poetry]
name = "sync-upgrade"
version = "0.1.1"
description = ""
authors = ["Moenes Ben Soussia <moenes.bensoussia@dataminded.be>", "Pascal Knapen <pascal.knapen@dataminded.be>"]
readme = "README.md"
packages = [{include = "syncupgrade"}]

[tool.poetry.dependencies]
python = ">=3.9"
libcst = "^1.2.0"
requests = "^2.31.0"
gitpython = "^3.1.42"
typer = ">=0.9,<0.11"
pytest = ">=7.4,<9.0"
pydantic = "^2.0.2"
rich = "^13.4.2"
pytest-mock = "^3.11.1"
coverage = "^7.2.7"

[tool.poetry.scripts]
refactor = "syncupgrade.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
